# microrust

./: Cargo.toml  README.md  build.sh  docker-compose.yml
api/: .env  Cargo.toml
api/migrations/: 0001_table_product.sql  V1__initial.sql
api/src/: main.rs  migrations.rs  products.rs
axum_askama_htmx_sqlx/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
axum_askama_htmx_sqlx/src/: api.rs  errors.rs  lib.rs  main.rs  ui.rs
axum_askama_htmx_sqlx/src/api/: sample.rs
axum_askama_htmx_sqlx/src/ui/: sample.rs  statics.rs
axum_askama_htmx_sqlx/static/: styles.css
axum_askama_htmx_sqlx/templates/: index.html  samples.html
cli/: Cargo.toml
cli/src/: commands.rs
contracts/: Cargo.toml  build.rs  schema.json
contracts/src/: api.rs  avro.rs  lib.rs  serial.rs
e2e/: Cargo.toml
e2e/tests/: e2e.rs  setup.rs
e2e/tests/features/: health.feature
event_bus/: Cargo.toml
event_bus/src/: main.rs
frontend/: README.md
frontend/src/: main.rs
sqlx_kafka_yew/: Cargo.toml
sqlx_kafka_yew/api/src/: products.rs
sqlx_kafka_yew/cli/src/: cli.rs  commands.rs  main.rs
sqlx_kafka_yew/contracts/: schema.json
sqlx_kafka_yew/contracts/src/: api.rs  lib.rs  serial.rs
sqlx_kafka_yew/e2e/tests/: e2e.rs
sqlx_kafka_yew/event_bus/: Cargo.toml
sqlx_kafka_yew/frontend/: README.md
surreal_htmx/: Cargo.toml  docker-compose.yml
surreal_htmx/src/: main.rs
surreal_htmx/templates/: index.html  info.html
