[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts = { path = "../contracts" }
refinery = { version = "0.8.10", features = ["mysql"] }
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6.20", features = ["json"] }
axum-prometheus = "0.4.0"
sentry = "0.31.6"
serde_json = "1.0.105"
axum-macros = "0.3.8"
structured-logger = "1.0.3"
log = { version = "0.4.20", features = ["kv_unstable_serde"] }
mysql = "23.0.0"
dotenv = "0.15.0"
