[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
structured-logger = "1.0.3"
axum = { version = "0.7.3", features = ["http2", "macros"] }
axum-prometheus = "0.5.0"
# Waiting for https://github.com/djc/askama/pull/824
#askama = { version = "0.12.1", features = ["with-axum"] }
#askama_axum = "0.4.0"
askama = { git = "http://github.com/raffaeleragni/askama", features = ["with-axum"] }
askama_axum = { git = "http://github.com/raffaeleragni/askama" }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
sentry = { version = "0.32.1", features = ["anyhow", "tower", "tracing"] }
sentry-tower = { version = "0.32.1", features = ["axum", "http"] }
serde = { version = "1.0.193", features = ["derive"] }
rust-embed = { version = "8.2.0", features = ["axum", "tokio"] }
dotenv = "0.15.0"
log = "0.4.20"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
