[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "e2e"
harness = false
