[package]
name = "surreal_htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["http2"] }
serde = { version = "1.0.192", features = ["derive"] }
surrealdb = "1.0.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "tokio-macros"] }
